[tool.poetry]
name = "steamship-prompt-template"
version = "0.1.0"
description = ""
authors = ["Steamship Developers <developers@steamship.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
steamship = "^2.3.13"
termcolor = "^2.2.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"